--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ logs
 *.log
 npm-debug.log*
 
+config.js
+
 # Runtime data
 pids
 *.pid
@@ -37,4 +39,3 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
-
