--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "base64-js": "^1.2.0",
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
-    "stream": "0.0.2",
+    "stream": "0.0.2"
   }
 }
