--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "azure-storage": "^1.3.2",
     "base64-js": "^1.2.0",
     "body-parser": "~1.0.1",
+    "clockwork": "^0.1.4",
     "express": "~4.0.0",
     "moment": "^2.15.2",
     "neo4j-driver": "^1.1.0-M02",
